<resources>
    <string name="app_name">MessengerApp</string>
    <string name="ellipses">...</string>


    <string name="login_signin_button">Sign In</string>
    <string name="login_signup_button">Sign Up</string>
    <string name="login_signup_text">Not registered?</string>
    <string name="login_nickname_text">Enter your nickname</string>
    <string name="login_password_text">Enter your password</string>


    <string name="signup_signup_button">Sign Up</string>
    <string name="signup_nickname_text">Enter your nickname</string>
    <string name="signup_password_text">Enter your password</string>
    <string name="signup_profession_text">What I do</string>
    <string name="menu_menu_search_title">search</string>
    <string name="menu_menu_settings_title">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conversations_search_hint">Search</string>
    <string name="settings_sign_out">Sign Out</string>
    <string name="settings_update">Update</string>
    <string name="search_search_hint">Search</string>

</resources>