<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scenes.signup.SignupActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/signup_icon"
        android:layout_width="@dimen/signup_icon_size"
        android:layout_height="@dimen/signup_icon_size"
        android:layout_marginTop="@dimen/signup_margin_big"
        android:contentDescription="@string/ellipses"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Circle"
        app:srcCompat="@drawable/avatar_image_placeholder" />


    <EditText
        android:id="@+id/signup_nameText"
        android:layout_width="@dimen/signup_text_width"
        android:layout_height="@dimen/signup_text_height"
        android:layout_marginTop="@dimen/signup_margin_big"
        android:background="@drawable/edittext_rounded"

        android:gravity="center"
        android:hint="@string/signup_nickname_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_icon" />


    <EditText
        android:id="@+id/signup_passText"
        android:layout_width="@dimen/signup_text_width"
        android:layout_height="@dimen/signup_text_height"
        android:layout_marginTop="@dimen/signup_margin_small"
        android:background="@drawable/edittext_rounded"
        android:gravity="center"
        android:hint="@string/signup_password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_nameText" />


    <EditText
        android:id="@+id/signup_profText"
        android:layout_width="@dimen/signup_text_width"
        android:layout_height="@dimen/signup_text_height"
        android:layout_marginTop="@dimen/login_margin_small"
        android:background="@drawable/edittext_rounded"
        android:gravity="center"
        android:hint="@string/signup_profession_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_passText"

        />

    <Button
        android:id="@+id/signup_signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_margin_huge"
        android:layout_weight="1"
        android:text="@string/signup_signup_button"
        app:backgroundTint="@color/signup_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_profText" />

</androidx.constraintlayout.widget.ConstraintLayout>