<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scenes.login.MainActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_icon"
        android:layout_width="@dimen/login_icon_size"
        android:layout_height="@dimen/login_icon_size"
        android:layout_marginTop="@dimen/login_margin_big"
        android:contentDescription="@string/ellipses"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Circle"
        app:srcCompat="@drawable/avatar_image_placeholder" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_nameText"
        android:layout_width="@dimen/login_text_width"
        android:layout_height="@dimen/login_text_height"
        android:layout_marginTop="@dimen/login_margin_big"
        android:background="@color/login_text"

        android:gravity="center"
        android:hint="@string/login_nickname_text"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_icon"
        app:placeholderText="Enter your nickname"
        app:placeholderTextColor="@android:color/darker_gray"
        app:shapeAppearanceOverlay="@style/RoundedCornersText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_passText"
        android:layout_width="@dimen/login_text_width"
        android:layout_height="@dimen/login_text_height"
        android:layout_marginTop="@dimen/login_margin_small"
        android:background="@color/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_nameText"

        app:placeholderText="@string/login_password_text"
        app:placeholderTextColor="@android:color/darker_gray"
        app:shapeAppearanceOverlay="@style/RoundedCornersText">

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_big"
        android:text="@string/login_signin_button"
        app:backgroundTint="@color/login_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_passText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_margin_big"
        android:text="@string/login_signup_button"
        android:textColor="@android:color/darker_gray"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="@dimen/login_signup_button_stroke"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_margin_small"
        android:text="@string/login_signup_text"
        app:layout_constraintBottom_toTopOf="@+id/login_signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>