<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".scenes.menu.SettingsFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/settings_icon"
        android:layout_width="@dimen/settings_icon_size"
        android:layout_height="@dimen/settings_icon_size"
        android:layout_marginTop="@dimen/settings_margin_top"
        android:contentDescription="@string/ellipses"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/avatar_image_placeholder"
        app:shapeAppearanceOverlay="@style/Circle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_name"
        android:layout_width="@dimen/settings_text_width"
        android:layout_height="@dimen/settings_text_height"
        android:layout_marginTop="@dimen/settings_margin_big"
        android:background="@color/settings_text"
        android:gravity="center"
        app:shapeAppearanceOverlay="@style/RoundedCornersText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_profession"
        android:layout_width="@dimen/settings_text_width"
        android:layout_height="@dimen/settings_text_height"
        android:layout_marginTop="@dimen/settings_margin_small"
        android:background="@color/settings_text"
        android:gravity="center"
        app:shapeAppearanceOverlay="@style/RoundedCornersText">

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/settings_update_button"
        android:layout_width="@dimen/settings_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_margin_big"
        android:text="@string/settings_update"
        app:backgroundTint="@color/settings_update" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_signout_button"
        android:layout_width="@dimen/settings_button_width"
        android:layout_height="wrap_content"
        android:text="@string/settings_sign_out"
        android:textColor="@android:color/darker_gray"
        app:backgroundTint="@color/white"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="@dimen/settings_signout_button_stroke" />
</LinearLayout>